Add container names to nginx

--- a/session-1/nginx/default.conf
+++ b/session-1/nginx/default.conf
@@ -2,12 +2,12 @@ server {
     listen       80;
     server_name  nginxserver;
 
-    location / {
-         proxy_pass http://<container_1_name>:<port>/;
+    location /app1 {
+         proxy_pass http://app1_container:8001/;
     }
 
-    location /app {
-         proxy_pass http://<container_2_name:<port>/;
+    location /app2 {
+         proxy_pass http://app2_container:8002/;
     }
 
 
