Create docker compose file

--- a/session-1/nginx/default.conf
+++ b/session-1/nginx/default.conf
@@ -3,11 +3,11 @@ server {
     server_name  nginxserver;
 
     location /app1 {
-         proxy_pass http://app1_container:8001/;
+         proxy_pass http://app1:8080/devopsarea-1.0/;
     }
 
     location /app2 {
-         proxy_pass http://app2_container:8002/;
+         proxy_pass http://app2:8080/devopsarea-1.0/;
     }
 
 
